[package]
name = "radroots_studio_app_i18n"
description = "Localization resources for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
mf2_i18n = { workspace = true, features = ["native"] }

[build-dependencies]
mf2_i18n = { workspace = true, features = ["build"] }

[lints]
workspace = true
