[package]
name = "radroots_studio_app_sqlite"
description = "SQLite persistence adapter for Radroots Studio"
version.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false

[dependencies]
rusqlite.workspace = true
thiserror.workspace = true

[lints]
workspace = true
